// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsTableEditCell > should render cell without edit buttons and dropdown 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 p-0 pr-4 text-right"
/>
`;

exports[`SettingsTableEditCell > should render dropdown 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 p-0 pr-4 text-right"
>
  <button
    aria-expanded={false}
    aria-haspopup="menu"
    className="focus-within:outline-offset-2 focus-within:outline-primary"
    data-state="closed"
    disabled={false}
    id="radix-:r2:"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
    type="button"
  >
    <svg
      className="cursor-pointer "
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</td>
`;

exports[`SettingsTableEditCell > should render edit buttons 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 p-0 pr-4 text-right"
>
  <button
    aria-expanded={false}
    aria-haspopup="menu"
    className="focus-within:outline-offset-2 focus-within:outline-primary"
    data-state="closed"
    disabled={false}
    id="radix-:r0:"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
    type="button"
  >
    <svg
      className="cursor-pointer "
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="19"
        cy="12"
        r="1"
      />
      <circle
        cx="5"
        cy="12"
        r="1"
      />
    </svg>
  </button>
</td>
`;
